docs: 更新 swagger
